--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Rivendell</title>
+    <style>
+      body {
+        background:url('static/bg.jpeg') bottom right #FFFFFF;
+      }
+    </style>
   </head>
   <body>
   Hello World!
