--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <style>
       body {
         background:url('static/bg.jpeg') bottom right #FFFFFF;
+        font-size: 16px;
+        font-family: "proxima-nova", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-smooth: always;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 14px;
+        line-height: 1.42857143;
+        color: #333;
+        background-color: #fff;
+      }
+      #title {
+        color:
       }
     </style>
   </head>
   <body>
-  Hello World!
+    <div id="title">Coming Soon</div>
     
   </body>
 </html>
