--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <style>
       body {
         background:url('static/bg.jpeg') bottom right #FFFFFF;
-        font-size: 16px;
-        font-family: "proxima-nova", sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         font-smooth: always;
@@ -17,12 +15,12 @@
         background-color: #fff;
       }
       #title {
-        color:
+        color: 
       }
     </style>
   </head>
   <body>
-    <div id="title">Coming Soon</div>
+    <div id="title">Under Construction</div>
     
   </body>
 </html>
