--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
         -moz-osx-font-smoothing: grayscale;
         font-smooth: always;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
-        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-family: Georgia, serif;
         font-size: 14px;
         line-height: 1.42857143;
         color: #333;
         background-color: #fff;
       }
       #title {
-        color: 
+        color: #293d54;
+        font-size: 30px;
+        margin: 30px;
+        font-style: italic;
       }
     </style>
   </head>
