--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
   </head>
   <body>
-    <div id="title">Under Construction</div>
+    <div id="title">Coming Soon</div>
     
   </body>
 </html>
